Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-52817

cgroup memory limits not shown when setting up a cluster/in prometheus

    XMLWordPrintable

Details

    • Untriaged
    • 1
    • Unknown

    Description

      As part of testing MB-52686 we found a couple of places in ns_server where cgroup limits don't appear to be respected, although it's unclear from the original ticket and document whether they should be.

      1. When a new cluster is created the cgroup limit is not shown as the maximum amount of memory that can be provisioned
      2. The sys_mem_total and sys_cpu_cores_available prometheus stats don't respect the cgroup limit

      The testing was done on Docker for Windows using the ubuntu:20.04 image and installing the latest neo couchbase server deb package (as of 1st July) manually.

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              Matt.Hall Matt Hall
              Matt.Hall Matt Hall
              Votes:
              0 Vote for this issue
              Watchers:
              8 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes

                  PagerDuty